changed default source location for lively4 to lively-kernel.org/lively4-jens/

--- a/static/popup.html
+++ b/static/popup.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div>Enter your servers location</div>
-    <input id="location_input" type="text" value="http://localhost:8081/lively4-core/"></input>
+    <input id="location_input" type="text" value="http://lively-kernel.org/lively4-jens/"></input>
     <div>Name a component to load</div>
     <input id="component_input" type="text" value="lively-halos"></input>
     <button type="button" id="load_button">Load component</button>
