changed component structure to match generic chrome extension structure

--- a/ui/popup.html
+++ b/ui/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Lively4 Loader</title>
-    <script type="text/javascript" src="../scripts/popup.js"></script>
+    <script type="text/javascript" src="./popup.js"></script>
     <style type="text/css">
       body {
           width: 250px;
@@ -50,7 +50,7 @@
   </head>
   <body>
     <div id="popup_header">
-      <img src="../media/icon-active.svg">
+      <img src="../background/media/icon-active.svg">
       <h1>Lively4 Loader</h1>
     </div>
     <h3>Enter your servers location</h3>
