Set correct global property lively4url instead of lively4Url (with capital U).

--- a/ui/popup.html
+++ b/ui/popup.html
@@ -54,7 +54,7 @@
       <h1>Lively4 Loader</h1>
     </div>
     <h3>Enter your servers location</h3>
-    <input id="location_input" type="text" value="http://lively-kernel.org/lively4-jens/"></input>
+    <input id="location_input" type="text" value="http://lively-kernel.org/lively4/"></input>
     <h3>Name a component to load</h3>
     <input id="component_input" type="text" value="lively-halos"></input>
     <button type="button" id="load_button">Load component</button>
