load lively hales and context menu

--- a/ui/popup.html
+++ b/ui/popup.html
@@ -21,7 +21,7 @@
           color: #464E5A;
           font-size: 14px;
       }
-      input {
+      #location_input {
         padding: 5px;
         width: 95%;
       }
@@ -55,8 +55,10 @@
     </div>
     <h3>Enter your servers location</h3>
     <input id="location_input" type="text" value="http://lively-kernel.org/lively4/"></input>
-    <h3>Name a component to load</h3>
-    <input id="component_input" type="text" value="lively-halos"></input>
-    <button type="button" id="load_button">Load component</button>
+    <!-- <h3>Name a component to load</h3> -->
+    <!-- <input id="component_input" type="text" value=""></input> -->
+    <!-- <button type="button" id="load_button">component</button> -->
+    <!-- <label><input type="checkbox" id="loadLively_input"/> load lively4</label> -->
+    <button type="button" id="load_button">load</button>
   </body>
 </html>
