--- a/ui/popup.html
+++ b/ui/popup.html
@@ -5,9 +5,9 @@
     <script type="text/javascript" src="./popup.js"></script>
     <style type="text/css">
       body {
-          width: 250px;
+          width: 350px;
           margin-top: 0px;
-          margin-bottom: 0px;
+          margin-bottom: 5px;
           color: #464E5A;
       }
       button {
@@ -55,10 +55,8 @@
     </div>
     <h3>Enter your servers location</h3>
     <input id="location_input" type="text" value="http://lively-kernel.org/lively4/"></input>
-    <!-- <h3>Name a component to load</h3> -->
-    <!-- <input id="component_input" type="text" value=""></input> -->
-    <!-- <button type="button" id="load_button">component</button> -->
-    <!-- <label><input type="checkbox" id="loadLively_input"/> load lively4</label> -->
-    <button type="button" id="load_button">load</button>
-  </body>
+
+    <input type="checkbox" id="loadLively_checkbox"/><span id="host_label">host</span>
+    </body>
+
 </html>
