fixed config and added reset

--- a/ui/popup.html
+++ b/ui/popup.html
@@ -13,7 +13,7 @@
       button {
           background-color: #ff9900;
           border: none;
-          padding: 18px;
+          padding: 4px;
           display: table;
           margin: 10px auto;
           font-weight: bold;
@@ -57,6 +57,7 @@
     <input id="location_input" type="text" value="http://lively-kernel.org/lively4/"></input>
 
     <input type="checkbox" id="loadLively_checkbox"/><span id="host_label">host</span>
+    <button id="reset_button">reset</button>
     </body>
 
 </html>
