--- a/ui/popup.html
+++ b/ui/popup.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Lively4 Loader</title>
+    <script type="text/javascript" src="../configs.js"></script>
     <script type="text/javascript" src="./popup.js"></script>
     <style type="text/css">
       body {
@@ -54,7 +55,7 @@
       <h1>Lively4 Loader</h1>
     </div>
     <h3>Enter your servers location</h3>
-    <input id="location_input" type="text" value="http://lively-kernel.org/lively4/"></input>
+    <input id="location_input" type="text" value=""></input>
 
     <input type="checkbox" id="loadLively_checkbox"/><span id="host_label">host</span>
     <button id="reset_button">reset</button>
